compiler/src/syntax/snapshots/parse_multi_input_function_type.snap
---
source: compiler/src/syntax/mod.rs
description: Number Number -> ()
expression: result
---
FunctionTypeNode {
    inputs: [
        NamedTypeNode {
            name: "Number",
            parameters: [],
        },
        NamedTypeNode {
            name: "Number",
            parameters: [],
        },
    ],
    output: UnitTypeNode,
}
