compiler/src/syntax/snapshots/parse_multiline_collection_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "\n            (\n                a,\n                b,\n                c,\n            )\n        "
expression: result
---
CollectionExpressionNode {
    elements: [
        VariableExpressionNode {
            variable: "a",
        },
        VariableExpressionNode {
            variable: "b",
        },
        VariableExpressionNode {
            variable: "c",
        },
    ],
}
