compiler/src/syntax/snapshots/parse_parenthesized_operator_expression.snap
---
source: compiler/src/syntax/mod.rs
description: (+)
expression: result
---
ConstructorExpressionNode {
    constructor: "Add",
}
