compiler/src/syntax/snapshots/parse_simple_intrinsic_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "intrinsic \"message\""
expression: result
---
IntrinsicExpressionNode {
    name: "message",
    inputs: [],
}
