compiler/src/syntax/snapshots/parse_simple_is_expression.snap
---
source: compiler/src/syntax/mod.rs
description: x is None
expression: result
---
IsExpressionNode {
    left: VariableExpressionNode {
        variable: "x",
    },
    right: ConstructorPatternNode {
        constructor: "None",
        elements: [],
    },
}
