compiler/src/syntax/snapshots/parse_simple_named_type.snap
---
source: compiler/src/syntax/mod.rs
description: Number
expression: result
---
NamedTypeNode {
    name: "Number",
    parameters: [],
}
