compiler/src/syntax/snapshots/parse_simple_valued_instance_definition.snap
---
source: compiler/src/syntax/mod.rs
description: "instance (Foo Number) : 3.14"
expression: result
---
InstanceDefinitionNode {
    comments: [],
    attributes: [],
    bound: BoundConstraintNode {
        trait_name: "Foo",
        parameters: [
            NamedTypeNode {
                name: "Number",
                parameters: [],
            },
        ],
    },
    constraints: [],
    value: Some(
        NumberExpressionNode {
            value: "3.14",
        },
    ),
}
