compiler/src/syntax/snapshots/parse_single_element_collection_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "a,"
expression: result
---
CollectionExpressionNode {
    elements: [
        VariableExpressionNode {
            variable: "a",
        },
    ],
}
