compiler/src/syntax/snapshots/parse_single_input_function_expression.snap
---
source: compiler/src/syntax/mod.rs
description: x -> y
expression: result
---
FunctionExpressionNode {
    inputs: [
        VariablePatternNode {
            variable: "x",
        },
    ],
    output: VariableExpressionNode {
        variable: "y",
    },
}
