compiler/src/syntax/snapshots/parse_single_input_function_type.snap
---
source: compiler/src/syntax/mod.rs
description: Number -> ()
expression: result
---
FunctionTypeNode {
    inputs: [
        NamedTypeNode {
            name: "Number",
            parameters: [],
        },
    ],
    output: UnitTypeNode,
}
