compiler/src/syntax/snapshots/parse_single_line_collection_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "a, b, c"
expression: result
---
CollectionExpressionNode {
    elements: [
        VariableExpressionNode {
            variable: "a",
        },
        VariableExpressionNode {
            variable: "b",
        },
        VariableExpressionNode {
            variable: "c",
        },
    ],
}
