compiler/src/syntax/snapshots/parse_string_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "\"abc\""
expression: result
---
StringExpressionNode {
    value: "abc",
}
